--- a/css/main.css
+++ b/css/main.css
@@ -155,221 +155,173 @@ input ::placeholder {
   color: #353535;
 }
 
-/*
-//Balises diverses
-
 * {
-    font-family: "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 a {
-    cursor: pointer;
-    text-decoration: none;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 .btn-explorer a {
-    color: #FFF;
+  color: #FFF;
 }
 
 #restaurants a {
-    color: #000;
+  color: #000;
 }
 
-//Location
-
 #location {
-    background-color: #EAEAEA;
-    display: flex;
-    justify-content: center;
-    .fa-location-dot {
-        color: #353535;
-        padding: 5px 5px 7px 15px;
-    }
+  background-color: #EAEAEA;
+  display: flex;
+  justify-content: center;
+}
+#location .fa-location-dot {
+  color: #353535;
+  padding: 5px 5px 7px 15px;
 }
 
 input {
-    background-color: #EAEAEA;
-    border: none;
-    font-weight: 600;
-    width: 125px;
-    ::placeholder {
-        color: #353535;
-    }
+  background-color: #EAEAEA;
+  border: none;
+  font-weight: 600;
+  width: 125px;
+}
+input ::placeholder {
+  color: #353535;
 }
 
-//Exploration
-
 .exploration {
-    align-items: center;
-    background-color: #F6F6F6;
-    display: flex;
-    flex-direction: column;
-    padding: 15px 0;
-    text-align: center;
-    .exploration h1 {
-        font-size: 15px;
-    }
+  align-items: center;
+  background-color: #F6F6F6;
+  display: flex;
+  flex-direction: column;
+  padding: 15px 0;
+  text-align: center;
+}
+.exploration .exploration h1 {
+  font-size: 15px;
 }
 
 .exploration p {
-    color: #353535;
+  color: #353535;
 }
 
 ul {
-    display: flex;
-    justify-content: space-evenly;
-    list-style-type: none;
-    margin: 0;
-    padding: 25px 0;
-    @media (max-width: 768px){
-        flex-direction: column;
-        justify-content: space-evenly;
-        margin: auto 0 auto 15px;
-    }
+  display: flex;
+  justify-content: space-evenly;
+  list-style-type: none;
+  margin: 0;
+  padding: 25px 0;
 }
-
-//Functioning
 
 .functioning {
-    margin-bottom: 5px;
-    padding: 20px 10px 30px 10px;
-    &__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-        &__card {
-        align-items: center;
-        background-color: #F6F6F6;
-        border-radius: 20px;
-        box-shadow: 0px 2px 14px lightgray;
-        height: 65px;
-        justify-content: center;
-        margin: 3%;
-        transform: scale(1);
-        transition: transform 400ms;
-        width: 70%;
-            &:hover {
-                background: lighten($primary-color, 25%);
-                transform: scale(1.05);
-            }
-        }
-    }
+  margin-bottom: 5px;
+  padding: 20px 10px 30px 10px;
 }
-
-.functioning h2 {
-    @media (max-width: 768px){
-        padding-top: 5px;
-    }
+.functioning__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.functioning__container__card {
+  align-items: center;
+  background-color: #F6F6F6;
+  border-radius: 20px;
+  box-shadow: 0px 2px 14px lightgray;
+  height: 65px;
+  justify-content: center;
+  margin: 3%;
+  transform: scale(1);
+  transition: transform 400ms;
+  width: 70%;
+}
+.functioning__container__card:hover {
+  background: #d7c0f2;
+  transform: scale(1.05);
 }
 
 .functioning a {
-    color: #000;
-    font-weight: 600;
+  color: #000;
+  font-weight: 600;
 }
 
-.step {
-    #step__one, #step__two, #step__three {
-        background-color: $primary-color;
-        border-radius: 50%;
-        color: #FFF;
-        padding: 0 5px 0 5px;
-        position: relative;
-        right: 9px;
-        top: 6px;
-        @media (max-width: 768px){
-            position: relative;
-            right: 240px;
-        }
-    }
+.step #step__one, .step #step__two, .step #step__three {
+  background-color: #9356DC;
+  border-radius: 50%;
+  color: #FFF;
+  padding: 0 5px 0 5px;
+  position: relative;
+  right: 9px;
+  top: 6px;
 }
 
 #step__two {
-    margin-left: -10px;
-    @media (max-width: 768px){
-        margin-left: -15px;
-    }
-}
-#step__three {
-    @media (max-width: 768px){
-        margin-left: -10px;
-    }
+  margin-left: -10px;
 }
 
 .fa-mobile-button, .fa-list-ul, .fa-store {
-    color: lightgray;
-    &:hover {
-        color: $primary-color;
-    }
+  color: lightgray;
+}
+.fa-mobile-button:hover, .fa-list-ul:hover, .fa-store:hover {
+  color: #9356DC;
 }
 
-//Restaurants
-
 #restaurants {
-    background-color: #F6F6F6;
-    @media (max-width: 768px){
-        align-items: center;
-        display: flex;
-        justify-content: center;
-    }
+  background-color: #F6F6F6;
 }
 
 #restaurants h2 {
-    padding: 15px 0 0 10px;
+  padding: 15px 0 0 10px;
 }
 
 .article {
-    background-color: #FFF;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    height: 297.5px;
-    margin: 15px;
-    width: 480px;
-    @media (max-width: 768px){
-        height: 450px;
-        margin: -27.5px 0 25px 0;
-        width: 650px;
-    }
-    &__palette {
-        position: relative;
-        z-index: 2;
-
-    }
-    &__enchantee {
-        position: relative;
-        z-index: 2;
-    }
-    &__francaise {
-        position: relative;
-        z-index: 2;
-    }
-    &__delice {
-        position: relative;
-        @media (max-width: 768px){
-            margin-bottom: 50px;
-        }
-    }
+  background-color: #FFF;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  height: 297.5px;
+  margin: 15px;
+  width: 480px;
+}
+.article__palette {
+  position: relative;
+  z-index: 2;
+}
+.article__enchantee {
+  position: relative;
+  z-index: 2;
+}
+.article__francaise {
+  position: relative;
+  z-index: 2;
+}
+.article__delice {
+  position: relative;
+}
 
 .article__image {
-    border-radius: 15px 15px 0 0;
-    box-shadow: 0px 2px 14px lightgray;
-    height: 215px;
-    position: relative;
-    width: 100%;
-    z-index: 3;
+  border-radius: 15px 15px 0 0;
+  box-shadow: 0px 2px 14px lightgray;
+  height: 215px;
+  position: relative;
+  width: 100%;
+  z-index: 3;
 }
 
 .article__container__card {
-    align-items: center;
-    border-radius: 20px;
-    display: flex;
-    height: 100px;
-    justify-content: space-between;
-    &--text {
-        margin-left: 0;
-        padding: 0 0 25px 12.5px;
-    }
-}}*/
+  align-items: center;
+  border-radius: 20px;
+  display: flex;
+  height: 100px;
+  justify-content: space-between;
+}
+.article__container__card--text {
+  margin-left: 0;
+  padding: 0 0 25px 12.5px;
+}
+
 * {
   font-family: "Roboto", sans-serif;
 }
@@ -390,16 +342,6 @@ html {
   justify-content: center;
   width: 100%;
 }
-@media (max-width: 768px) {
-  .restaurantcontainer {
-    height: 300px;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .restaurantcontainer {
-    max-width: 1000px;
-  }
-}
 .restaurantcontainer img {
   background-size: cover;
   height: 300px;
@@ -407,18 +349,6 @@ html {
   object-fit: cover;
   position: relative;
   width: 100%;
-}
-@media (max-width: 768px) {
-  .restaurantcontainer img {
-    width: 768px;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .restaurantcontainer img {
-    height: 295px;
-    max-width: 1000px;
-    width: 820px;
-  }
 }
 
 #img__francaise {
@@ -438,29 +368,9 @@ html {
   position: absolute;
   width: 100%;
 }
-@media (max-width: 768px) {
-  .restaurantcontainer__title {
-    padding-right: 25px;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .restaurantcontainer__title {
-    padding-right: 27.5px;
-  }
-}
 .restaurantcontainer__title h1 {
   font-family: "Shrikhand", cursive;
   padding-left: 20px;
-}
-@media (max-width: 768px) {
-  .restaurantcontainer__title h1 {
-    padding-left: 20px;
-  }
-}
-@media (max-width: 991px) {
-  .restaurantcontainer__title h1 {
-    padding-left: 22.5px;
-  }
 }
 
 section {
@@ -469,32 +379,11 @@ section {
   justify-items: center;
   max-width: 100%;
 }
-@media (max-width: 768px) {
-  section {
-    display: flex;
-    flex-direction: column;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  section {
-    justify-content: space-between;
-  }
-}
 
 .menu__choice {
   align-items: flex-end;
   height: auto;
   justify-items: center;
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .menu__choice {
-    width: 630px;
-  }
-}
-@media (min-width: 992px) {
-  .menu__choice {
-    width: auto;
-  }
 }
 .menu__choice--text {
   display: flex;
@@ -517,20 +406,6 @@ section {
   top: 0;
   transition: transform 500ms ease-in-out;
   width: 50px;
-}
-@media (max-width: 768px) {
-  .menu__choice--price {
-    font-size: 10px;
-    position: relative;
-    left: 30px;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .menu__choice--price {
-    font-size: 10px;
-    position: relative;
-    left: 25px;
-  }
 }
 
 .textone {
@@ -560,16 +435,6 @@ section {
   position: relative;
   bottom: 20px;
 }
-@media (max-width: 768px) {
-  .menu__choice__enchantee {
-    top: 5px;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .menu__choice__enchantee {
-    top: 0;
-  }
-}
 
 .check {
   align-items: center;
@@ -588,12 +453,6 @@ section {
   width: 70px;
   z-index: 2;
 }
-@media (max-width: 991px) {
-  .check {
-    position: absolute;
-    left: 591px;
-  }
-}
 .check__animation {
   background-color: #FFF;
   border-radius: 50px;
@@ -606,11 +465,6 @@ section {
   transition: transform 500ms ease-in-out;
   width: 20px;
   z-index: 3;
-}
-@media (max-width: 991px) {
-  .check__animation {
-    margin: 0;
-  }
 }
 .check__animation i {
   color: #99E2D0;
@@ -627,18 +481,6 @@ section {
   right: 90px;
   width: 40px;
 }
-@media (max-width: 768px) {
-  .card__ghost {
-    height: 35px;
-    position: relative;
-    right: 180px;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .card__ghost {
-    right: 180px;
-  }
-}
 
 .card__menu {
   align-items: center;
@@ -651,11 +493,6 @@ section {
   position: relative;
   width: 450px;
 }
-@media (min-width: 768px) and (max-width: 991px) {
-  .card__menu {
-    width: 100%;
-  }
-}
 
 .card__decoration--menu {
   background-color: #FFF;
@@ -665,11 +502,6 @@ section {
 .card__decoration--menu:hover {
   box-shadow: 10px 10px 20px #343638;
   cursor: pointer;
-}
-@media (max-width: 768px) {
-  .card__decoration--menu {
-    width: 100%;
-  }
 }
 
 /* Header */
