--- a/sass/composants/composants.scss
+++ b/sass/composants/composants.scss
@@ -1,16 +1,3 @@
-.btn {
-    grid-row: 4;
-    padding: 50px;
-    &__menu {
-        align-items: center;
-        display: flex;
-        padding: 20px;
-        @media (min-width: 768px){
-            grid-column: 2;
-        }
-    }
-}
-
 .btn-explorer {
     align-items: center;
     background-image: linear-gradient(to top, $primary-color, $secondary-color);
@@ -35,16 +22,6 @@
     position: relative;
     top: 30px;
     right: 585px;
-    @media (max-width: 768px){
-    position: relative;
-    bottom: -27.5px;
-    right: 225px;
-    }
-    @media (min-width: 768px) and (max-width: 991px){
-        position: relative;
-        bottom: -27.5px;
-        right: 270px;
-    }
 }
 
 .fa-heart {
@@ -67,15 +44,6 @@
     position: relative;
     bottom: 12.5px;
     left: -20px;
-    @media (max-width: 768px){
-        position: relative;
-        top: -5px;
-    }
-    @media (min-width: 768px) and (max-width: 992px){
-        position: relative;
-        top: -5px;
-        left: -20px;
-    }
 }
 
 .fa-utensils {
@@ -88,7 +56,7 @@
     font-size: 17.5px;
     font-weight: bold;
     height: 22.5px;
-    position: relative;
+    position: absolute;
     right: 20px;
     top: 20px;
     width: 72.5px;
