--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@
 
 .loading div {
   border-radius: 50px;
-  font-size: 27.5px;
+  font-size: 28px;
   font-weight: bold;
   height: 30px;
   margin: 0 5px;
@@ -268,12 +268,16 @@ ul {
   color: #9356DC;
 }
 
-#restaurants {
+#restaurants__titre {
   background-color: #F6F6F6;
+  margin-bottom: 0;
+  padding: 30px 0 15px 10px;
 }
 
-#restaurants h2 {
-  padding: 15px 0 0 10px;
+#restaurants {
+  background-color: #F6F6F6;
+  display: flex;
+  flex-direction: column;
 }
 
 .article {
@@ -281,7 +285,7 @@ ul {
   border-radius: 15px;
   display: flex;
   flex-direction: column;
-  height: 297.5px;
+  height: 298px;
   margin: 15px;
   width: 480px;
 }
@@ -299,6 +303,7 @@ ul {
 }
 .article__delice {
   position: relative;
+  z-index: 2;
 }
 
 .article__image {
@@ -319,7 +324,7 @@ ul {
 }
 .article__container__card--text {
   margin-left: 0;
-  padding: 0 0 25px 12.5px;
+  padding: 0 0 25px 13px;
 }
 
 * {
@@ -458,7 +463,7 @@ section {
   border-radius: 50px;
   height: 20px;
   justify-content: center;
-  margin-top: 2.5px;
+  margin-top: 3px;
   overflow: hidden;
   position: absolute;
   transform: rotate(-360deg);
@@ -602,7 +607,7 @@ ul {
 
 .fa-heart-menu {
   position: relative;
-  bottom: 12.5px;
+  bottom: 13px;
   left: -20px;
 }
 
@@ -613,13 +618,13 @@ ul {
 .new {
   background-color: #99E2D0;
   color: #048968;
-  font-size: 17.5px;
+  font-size: 18px;
   font-weight: bold;
-  height: 22.5px;
+  height: 23px;
   position: absolute;
   right: 20px;
   top: 20px;
-  width: 72.5px;
+  width: 73px;
   z-index: 4;
 }
 
