--- a/sass/pages/_pageaccueil.scss
+++ b/sass/pages/_pageaccueil.scss
@@ -205,7 +205,6 @@ ul {
     flex-direction: column;
     height: 298px;
     margin: 15px;
-    width: 480px;
     &__palette {
         position: relative;
         z-index: 2;
@@ -228,6 +227,7 @@ ul {
     border-radius: 15px 15px 0 0;
     box-shadow: 0px 2px 14px lightgray;
     height: 215px;
+    object-fit: cover;
     position: relative;
     width: 100%;
     z-index: 3;
