--- a/sass/pages/_pagemenu.scss
+++ b/sass/pages/_pagemenu.scss
@@ -57,8 +57,10 @@ html {
 
 section {
     background-color: #F6F6F6;
+    display: flex;
     height: auto;
     justify-items: center;
+    padding-bottom: 100px;
     max-width: 100%;
 }
 
@@ -115,7 +117,7 @@ section {
 
 .menu__choice__enchantee {
     position: relative;
-    bottom: 20px;
+    bottom: -40px;
 }
 
 .check {
@@ -161,18 +163,30 @@ section {
     height: 35px;
     margin-right: 250px;
     position: relative;
-    right: 90px;
+    right: -17px;
+    width: 40px;
+}
+
+.card__ghost__enchantee {
+    align-items: baseline;
+    border-bottom: 3px solid $tertiary-color;
+    display: flex;
+    height: 35px;
+    margin-right: 250px;
+    position: relative;
+    bottom: 35px;
+    right: -17px;
     width: 40px;
 }
 
 .card__menu {
     align-items: center;
-    border-radius: 15px 15px 15px 15px;
+    border-radius: 15px;
     display: flex;
     height: 66px;
     justify-content: space-between;
-    padding-left: 15px;
-    padding-right: 15px;
+    margin: 13px;
+    padding: 0 15px;
     position: relative;
     width: 450px;
 }
