--- a/css/main.css
+++ b/css/main.css
@@ -223,27 +223,26 @@ ul {
 .functioning__container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 .functioning__container__card {
-  align-items: center;
   background-color: #F6F6F6;
   border-radius: 20px;
   box-shadow: 0px 2px 14px lightgray;
   height: 65px;
-  justify-content: center;
   margin: 3%;
   transform: scale(1);
   transition: transform 400ms;
 }
 .functioning__container__card:hover {
-  background: #d7c0f2;
+  background: #ceb3ef;
+  cursor: pointer;
   transform: scale(1.05);
 }
 
 .functioning a {
   color: #000;
   font-weight: 600;
+  line-height: 35px;
 }
 
 .step #step__one, .step #step__two, .step #step__three {
@@ -252,16 +251,12 @@ ul {
   color: #FFF;
   padding: 0 5px 0 5px;
   position: relative;
-  right: 9px;
-  top: 6px;
-}
-
-#step__two {
-  margin-left: -10px;
+  right: 10px;
 }
 
 .fa-mobile-button, .fa-list-ul, .fa-store {
   color: lightgray;
+  padding: 0 15px 0 10px;
 }
 .fa-mobile-button:hover, .fa-list-ul:hover, .fa-store:hover {
   color: #9356DC;
