--- a/sass/pages/_pageaccueil.scss
+++ b/sass/pages/_pageaccueil.scss
@@ -136,19 +136,17 @@ ul {
     &__container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
         &__card {
-        align-items: center;
         background-color: #F6F6F6;
         border-radius: 20px;
         box-shadow: 0px 2px 14px lightgray;
         height: 65px;
-        justify-content: center;
         margin: 3%;
         transform: scale(1);
         transition: transform 400ms;
             &:hover {
-                background: lighten($primary-color, 25%);
+                background: lighten($primary-color, 22%);
+                cursor: pointer;
                 transform: scale(1.05);
             }
         }
@@ -158,6 +156,7 @@ ul {
 .functioning a {
     color: #000;
     font-weight: 600;
+    line-height: 35px;
 }
 
 .step {
@@ -167,17 +166,13 @@ ul {
         color: #FFF;
         padding: 0 5px 0 5px;
         position: relative;
-        right: 9px;
-        top: 6px;
+        right: 10px;
     }
-}
-
-#step__two {
-    margin-left: -10px;
 }
 
 .fa-mobile-button, .fa-list-ul, .fa-store {
     color: lightgray;
+    padding: 0 15px 0 10px;
     &:hover {
         color: $primary-color;
     }
