--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -1,5 +1,5 @@
 @mixin shadow-button {
-    box-shadow: 4px 4px 5px #abb0b4;
+    box-shadow: 4px 4px 5px #ABB0B4;
 }
 
 @mixin shadow-button-hover {
@@ -7,5 +7,5 @@
 }
 
 @mixin shrikhand {
-    font-family: "shrikhand", cursive;
+    font-family: "Shrikhand", cursive;
 }
