--- a/sass/composants/composants.scss
+++ b/sass/composants/composants.scss
@@ -26,8 +26,8 @@
 
 .btn-order {
     position: relative;
-    top: 290px;
-    right: 858px;
+    left: 40px;
+    top: 22px;
 }
 
 .fa-arrow-left {
