--- a/sass/pages/_pageaccueil.scss
+++ b/sass/pages/_pageaccueil.scss
@@ -48,7 +48,7 @@ input {
     flex-direction: column;
     padding: 15px 0;
     text-align: center;
-    .exploration h1 {
+    h1 {
         font-size: 15px;
     }
 }
