--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ input ::placeholder {
   padding: 15px 0;
   text-align: center;
 }
-.exploration .exploration h1 {
+.exploration h1 {
   font-size: 15px;
 }
 
@@ -311,8 +311,8 @@ html {
 section {
   background-color: #F6F6F6;
   display: flex;
+  flex-direction: column;
   height: auto;
-  justify-items: center;
   padding-bottom: 50px;
   max-width: 100%;
 }
@@ -329,7 +329,6 @@ section {
   margin: 0;
   transition: transform 500ms ease-in-out;
   white-space: nowrap;
-  width: 232px;
 }
 .menu__choice--text h2 {
   width: auto;
@@ -338,11 +337,11 @@ section {
   align-items: flex-end;
   border-radius: 0 30px 30px 0;
   display: flex;
+  font-size: 10px;
   height: 100%;
-  margin-left: 10px;
-  top: 0;
+  position: absolute;
+  left: 220px;
   transition: transform 500ms ease-in-out;
-  width: 50px;
 }
 
 .textone {
@@ -382,8 +381,8 @@ section {
   float: right;
   height: 100%;
   justify-content: center;
-  position: absolute;
-  left: 410px;
+  position: relative;
+  left: 16px;
   transform: scaleX(0);
   transform-origin: right;
   transition: transform 400ms;
@@ -440,7 +439,6 @@ section {
   margin: 13px;
   padding: 0 15px;
   position: relative;
-  width: 450px;
 }
 
 .card__decoration--menu {
@@ -548,8 +546,8 @@ ul {
 
 .btn-order {
   position: relative;
-  top: 290px;
-  right: 858px;
+  left: 40px;
+  top: 22px;
 }
 
 .fa-arrow-left {
