--- a/sass/pages/_pagemenu.scss
+++ b/sass/pages/_pagemenu.scss
@@ -58,8 +58,8 @@ html {
 section {
     background-color: #F6F6F6;
     display: flex;
+    flex-direction: column;
     height: auto;
-    justify-items: center;
     padding-bottom: 50px;
     max-width: 100%;
 }
@@ -75,7 +75,6 @@ section {
         margin: 0;
         transition: transform 500ms ease-in-out;
         white-space: nowrap;
-        width: 232px;
         h2 {
             width: auto;
         }
@@ -84,11 +83,11 @@ section {
         align-items: flex-end;
         border-radius: 0 30px 30px 0;
         display: flex;
+        font-size: 10px;
         height: 100%;
-        margin-left: 10px;
-        top: 0;
+        position: absolute;
+        left: 220px;
         transition: transform 500ms ease-in-out;
-        width: 50px;
     }
 }
 
@@ -129,8 +128,8 @@ section {
     float: right;
     height: 100%;
     justify-content: center;
-    position: absolute;
-    left: 410px;
+    position: relative;
+    left: 16px;
     transform: scaleX(0);
     transform-origin: right;
     transition: transform 400ms;
@@ -188,7 +187,6 @@ section {
     margin: 13px;
     padding: 0 15px;
     position: relative;
-    width: 450px;
 }
 
 .card__decoration--menu {
