--- a/sass/pages/_pagemenu.scss
+++ b/sass/pages/_pagemenu.scss
@@ -85,7 +85,7 @@ section {
         display: flex;
         font-size: 10px;
         height: 100%;
-        position: absolute;
+        position: relative;
         left: 220px;
         transition: transform 500ms ease-in-out;
     }
