--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -14,3 +14,6 @@ $third-delay: 1000ms;
 $primary-color: #9356DC;
 $secondary-color: #FF79DA;
 $tertiary-color: #99E2D0;
+
+$background-color: #F6F6F6;
+$dark-color: #353535;
