--- a/sass/layout/commun.scss
+++ b/sass/layout/commun.scss
@@ -13,10 +13,9 @@
         font-weight: bolder;
         margin: 25px 0;
     }
-}
-
-.header--menu a {
-    color: #000;
+    &--menu a {
+        color: #000;
+    }
 }
 
 // Font Awesome
@@ -28,45 +27,40 @@
 
 // Footer
 
-footer {
+.footer {
     background-color: #353535;
     color: #FFF;
     font-weight: 100;
     width: 100%;
-    .footer__logo {
+    ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        list-style-type: none;
+        margin: 0;
+        padding: 0 20px;
+    }
+    &__logo {
         font-family: Shrikhand, cursive;
         font-size: 20px;
         height: 17px;
         margin: 30px 0 15px 0;
         width: 98px;
     }
-}
-
-footer a {
-    color: #FFF;
-    &:hover {
-        color: $primary-color;
+    li {
+        margin-top: 15px;
     }
-}
-
-footer li {
-    margin-top: 15px;
-}
-
-footer li:nth-child(2),
-footer li:nth-child(3){
-    font-weight: bold;
-}
-
-footer li:nth-child(5){
-    margin-bottom: 30px;
-}
-
-ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    list-style-type: none;
-    margin: 0;
-    padding: 0 20px;
+    li:nth-child(2),
+    li:nth-child(3){
+        font-weight: bold;
+    }
+    li:nth-child(5){
+        margin-bottom: 30px;
+    }
+    a {
+        color: #FFF;
+        &:hover {
+            color: $primary-color;
+        }
+    }
 }
