--- a/sass/pages/_pageaccueil.scss
+++ b/sass/pages/_pageaccueil.scss
@@ -56,6 +56,9 @@ input {
     &__container {
     display: flex;
     flex-direction: column;
+    @media screen and (min-width: 768px) {
+        flex-direction: row;
+    }
         &__card {
         background-color: $background-color;
         border-radius: 20px;
@@ -64,6 +67,10 @@ input {
         margin: 3%;
         transform: scale(1);
         transition: transform 400ms;
+        @media screen and (min-width: 768px) {
+            margin: 1%;
+            width: 32%;
+        }
         &:hover {
             background: lighten($primary-color, 22%);
             cursor: pointer;
@@ -79,6 +86,9 @@ input {
 }
 
 .step {
+    @media screen and (min-width: 768px) {
+        padding-right: 10px;
+    }
     #step__one, #step__two, #step__three {
         background-color: $primary-color;
         border-radius: 50%;
@@ -87,11 +97,18 @@ input {
         position: relative;
         right: 10px;
     }
+    @media screen and (min-width: 768px) {
+        padding: 0;
+    }
 }
 
 .fa-mobile-button, .fa-list-ul, .fa-store {
     color: gray;
     padding: 0 15px 0 10px;
+    @media screen and (min-width: 768px) {
+        margin-right: 10px;
+        padding: 0;
+    }
     &:hover {
         color: $primary-color;
     }
