--- a/css/main.css
+++ b/css/main.css
@@ -224,7 +224,7 @@ input ::placeholder {
   display: flex;
   flex-direction: column;
 }
-#restaurants__titre #restaurants #restaurants a {
+#restaurants__titre #restaurants a {
   color: #000;
 }
 
@@ -260,6 +260,21 @@ input ::placeholder {
   color: #000;
   margin-left: 0;
   padding: 0 0 25px 13px;
+}
+@media screen and (min-width: 768px) {
+  .article__container__card--text {
+    padding-left: 5px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .article__container__card h3 {
+    font-size: 13px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .article__container__card p {
+    font-size: 12px;
+  }
 }
 
 * {
@@ -320,6 +335,11 @@ section {
   height: auto;
   padding-bottom: 50px;
   max-width: 100%;
+}
+@media screen and (min-width: 768px) {
+  section {
+    flex-direction: unset;
+  }
 }
 section .menu__choice {
   align-items: flex-end;
@@ -555,6 +575,11 @@ section .card__ghost__enchantee {
   width: 73px;
   z-index: 4;
 }
+@media screen and (min-width: 768px) {
+  .new {
+    right: 10px;
+  }
+}
 
 .fa-heart {
   color: lightgray;
@@ -562,6 +587,11 @@ section .card__ghost__enchantee {
   position: relative;
   top: -10px;
   left: -27px;
+}
+@media screen and (min-width: 768px) {
+  .fa-heart {
+    left: -10px;
+  }
 }
 .fa-heart:hover::before {
   background: linear-gradient(to top, #9356DC, #FF79DA);
