--- a/sass/composants/composants.scss
+++ b/sass/composants/composants.scss
@@ -15,6 +15,9 @@
     top: 20px;
     width: 73px;
     z-index: 4;
+    @media screen and (min-width: 768px){
+        right: 10px;
+    }
 }
 
 .fa-heart {
@@ -23,6 +26,9 @@
     position: relative;
     top: -10px;
     left: -27px;
+    @media screen and (min-width: 768px){
+        left: -10px;
+    }
     &:hover::before {
         background: linear-gradient(to top, $primary-color, $secondary-color);
         background-clip: text;
