--- a/sass/pages/_pageaccueil.scss
+++ b/sass/pages/_pageaccueil.scss
@@ -124,9 +124,9 @@ input {
         background-color: $background-color;
         display: flex;
         flex-direction: column;
-        #restaurants a {
-            color: #000;
-        }
+    }
+    #restaurants a {
+        color: #000;
     }
 }
 
@@ -163,6 +163,19 @@ input {
             color: #000;
             margin-left: 0;
             padding: 0 0 25px 13px;
+            @media screen and (min-width: 768px){
+                padding-left: 5px;
+            }
+        }
+        h3 {
+            @media screen and (min-width: 768px){
+                font-size: 13px;
+            }
+        }
+        p {
+            @media screen and (min-width: 768px){
+                font-size: 12px;
+            }
         }
     }
 }
