--- a/css/main.css
+++ b/css/main.css
@@ -266,12 +266,12 @@ input ::placeholder {
     padding-left: 5px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
   .article__container__card h3 {
     font-size: 13px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
   .article__container__card p {
     font-size: 12px;
   }
