--- a/sass/pages/_pageaccueil.scss
+++ b/sass/pages/_pageaccueil.scss
@@ -168,12 +168,12 @@ input {
             }
         }
         h3 {
-            @media screen and (min-width: 768px){
+            @media screen and (min-width: 768px) and (max-width: 991px){
                 font-size: 13px;
             }
         }
         p {
-            @media screen and (min-width: 768px){
+            @media screen and (min-width: 768px) and (max-width: 991px){
                 font-size: 12px;
             }
         }
