--- a/sass/pages/_pageaccueil.scss
+++ b/sass/pages/_pageaccueil.scss
@@ -72,9 +72,12 @@ input {
             width: 32%;
         }
         &:hover {
-            background: lighten($primary-color, 22%);
+            background: lighten($primary-color, 35%);
             cursor: pointer;
             transform: scale(1.05);
+        }
+        &:hover :nth-child(2) {
+            color: $primary-color;
         }
             &__link {
                 color: #000;
