--- a/sass/pages/_pagemenu.scss
+++ b/sass/pages/_pagemenu.scss
@@ -55,16 +55,13 @@ html {
 
 // Section
 
-section {
+#restaurants__menu {
     background-color: #F6F6F6;
     display: flex;
     flex-direction: column;
     height: auto;
     padding-bottom: 50px;
     max-width: 100%;
-    @media screen and (min-width: 768px){
-        flex-direction: unset;
-    }
     .menu__choice {
         align-items: flex-end;
         height: auto;
